--- a/index.css
+++ b/index.css
@@ -178,7 +178,7 @@ color: #000000;
         height: 165px;
     }
 
-    .header {
+    .h1-header {
     
     font-style: normal;
     font-weight: 700px;
