--- a/index.css
+++ b/index.css
@@ -17,33 +17,6 @@ html {
         color: #c00;
     }
     
-    .btn {
-        background: #278EED; /*Фон кнопки*/
-        border: 1px solid #278EED;
-        border-radius: 20px; /*Закругление кнопки*/
-        padding: 20px; /* Размер кнопки*/
-        color: white; /*Цвет кнопки*/
-        cursor: pointer;
-       /* padding-top: 8px;  /*Внутренний отступ сверху*/
-       /* padding-bottom: 8px; /*Внутренний отступ снизу*/
-        /*padding-left: 12px; /*Внутренний отступ слева*/
-        /*padding-right: 12px; /*Внутренний отступ справа*/
-    }
-.btn_large{
-    font-size: 18px; /*Размер шрифта*/
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 115px;
-    padding-right: 115px;
-}
-.btn_small{
-    font-size: 14px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-left: 30px;
-    padding-right: 30px;
-}
-    
     iframe {
         border: 1px solid #ccc;
     }
@@ -64,57 +37,75 @@ html {
     ol { 
         padding-left: 0px;
     }
-    
-    .cap-section {
-        display: flex;
-        /*gap: 32px; /*Пробел между элементами
-       /*  justify-content: center; /*Выравнивает по центру всей страницы*/ 
-        box-sizing: border-box;
+
+    /*Блок*/ /*Попринципам БЭМ*/
+    .header {
+        position: sticky; /*прилипает» к экрану при прокрутке, пока не встретится с границей родительского блока.*/
+        top:0;
+        height: 64px;
         background: #F3F4F6;
-       /* padding: 20px 0px 20px;*/
-    }
 
-.cap-div span {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 28px;
-    text-align: center;
-    color: #000000;
-    width: 240px;
-    margin: 0;
-        
-
-}
-
-    .cap-div {
         display: flex;
-       /* flex-direction: column;/*ставим колонкой*/
-        align-items: center; /*центрирует элементы по вспомогательной оси*/
-        padding: 20px 200px;
+        align-items: center;
+        padding: 0px 114px;
+
+    }
+    /*Элементы блока*/
+    .header__title{
+        font-size: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 30px;
+        color: #000000;
+    }
+    .header__logo{
+        margin: 0;
     }
 
-.cap-div img {
-width: 59px;
-height: 31px
+    .header__tel{
+        margin-left: auto; /* Значения-ключевые слова */
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 28px;
+        color: #000000;
+        text-decoration: none; /*убирает подчеркивание ссылки*/
+    }
+    .header__btn{
+        margin-left: 32px; /*левый отступ*/
+    }
+
+    .btn {
+        background: #278EED; /*Фон кнопки*/
+        border: 1px solid #278EED;
+        border-radius: 20px; /*Закругление кнопки*/
+        padding: 20px; /* Размер кнопки*/
+        color: white; /*Цвет кнопки*/
+        cursor: pointer;
+        /* padding-top: 8px;  /*Внутренний отступ сверху*/
+        /* padding-bottom: 8px; /*Внутренний отступ снизу*/
+        /*padding-left: 12px; /*Внутренний отступ слева*/
+        /*padding-right: 12px; /*Внутренний отступ справа*/
+    }
+.btn_large{
+    font-size: 18px; /*Размер шрифта*/
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 115px;
+    padding-right: 115px;
 }
+.btn_small{
+    font-size: 14px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+    
 
 
-.cap-div a {
-    width: 240px;
-    margin: 0;
-        
-font-style: normal;
-font-weight: 600;
-font-size: 16px;
-line-height: 28px;
-text-align: center;
-color: #000000;
 
-    }
-  
-
-    /*Первая секция*/
+    /*Первая секция*/ /*по технологии БЭМ*/
     .first-section{
         display: flex;
         flex-direction: column;
@@ -126,6 +117,27 @@ color: #000000;
         background-size: cover; /* заполняет фон во всю ширину стр.*/
         background-color: #278EED;
     }
+    .first-section__header { 
+    
+        font-style: normal;
+        font-weight: 700px;
+        font-size: 44px;
+        line-height: 58px;
+        text-align: center;
+        margin: 0;
+     }
+        
+     .first-section__text {/*Настройка текста для первого <p>*/
+            max-width: 572px; /*адаптируем текс под экран*/
+            font-style: normal;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 30px;
+            text-align: center;
+            margin-top: 16px;
+            margin-bottom: 52px;
+        }
+        
 
     /*Вторая секция*/
     .second-section {
@@ -178,55 +190,8 @@ color: #000000;
         height: 165px;
     }
 
-    .h1-header {
-    
-    font-style: normal;
-    font-weight: 700px;
-    font-size: 44px;
-    line-height: 58px;
-    text-align: center;
-    margin: 0;
-    }
-    
-    .text {/*Настройка текста для первого <p>*/
-        max-width: 572px; /*адаптируем текс под экран*/
-        font-style: normal;
-        font-weight: 600;
-        font-size: 18px;
-        line-height: 30px;
-        text-align: center;
-        margin-top: 16px;
-        margin-bottom: 52px;
-    }
-    
-    /* header { /*ХЗ устанавливаем размеры хедера*/
-/*   display: flex;
-    flex-direction: row;
-    justify-content: flex-start;} */
-    
-    /* .span-header{/*размещаем текст хедера*/
-    /* 
-    margin-left: 114px;
-    margin-top: 18px;
-    margin-bottom: 15px;
-    margin-right: 1156px;
-    box-sizing: border-box;/*применяется для изменения алгоритма расчёта ширины и высоты элемента*/
-    /* 
-    }
-    
-    .img-header{
-    
-    left: 202px;
-    top: 18px;
-    bottom: 15px;
-    right: 1139x;
-    } */
-    
-    header a{ /*цвет текста хедера*/
-        color: black;
-    }
-
-    * {/*НОВОЕ*/
-        margin: 0;/*Все отступы по умолчанию убраны*/
+ 
+  /* {/*НОВОЕ*/
+       /* margin: 0;/*Все отступы по умолчанию убраны
         padding: 0;
-            }
+            }*/
